--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "locomotive-scroll": "^5.0.0-beta.11",
     "next": "^14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
