--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.10",
     "framer-motion": "^11.0.3",
     "gsap": "^3.12.5",
     "locomotive-scroll": "^5.0.0-beta.11",
