--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.3",
     "split-type": "^0.3.4"
   },
   "devDependencies": {
