--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.105.4",
+    "@react-three/fiber": "^8.16.2",
+    "@types/three": "^0.163.0",
     "@vercel/speed-insights": "^1.0.10",
     "framer-motion": "^11.0.3",
     "gsap": "^3.12.5",
@@ -16,11 +19,14 @@
     "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-three-fiber": "^6.0.13",
     "sharp": "^0.33.3",
-    "split-type": "^0.3.4"
+    "split-type": "^0.3.4",
+    "three": "^0.163.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "leva": "^0.9.35",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
